--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
+#web
 **node_modules
-**/.idea/
 **/dist/
+
+#jetbrains
+**/.idea/
+**/target/
+**/out/
+
+
+# latex
 **/*.dvi
 **/*.log
 **/*.aux
-**/target/
-**/out/
