--- a/web/react/react-system/package.json
+++ b/web/react/react-system/package.json
@@ -11,6 +11,18 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "eslint": "eslint --format './node_modules/eslint-friendly-formatter/index.js' ./src/* --fix",
+    "eslint_html": "eslint --format html ./src/* -o ./dist/eslint/index.html --fix",
+    "eslint_markdown": "eslint --format './node_modules/eslint-formatter-markdown/markdown.js' ./src/*  -o ./dist/eslint/index.md --fix"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.0.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-formatter-markdown": "^1.0.4",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0"
   }
 }
