--- a/kotlin/_system/src/main/resources/application.properties
+++ b/kotlin/_system/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.session.cookie.max-age=3600
 #spring.redis.host=www.learnwy.com
 #spring.redis.port=50829
 # data
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://www.learnwy.com:50826/learnwy
 spring.datasource.username=learnwy_db
@@ -16,4 +16,4 @@ spring.datasource.password=learnwy_db
 ## restart exclude path
 #spring.devtools.restart.exclude=
 # static path
-spring.mvc.static-path-pattern=/resources/** 
+spring.mvc.static-path-pattern=/resources/**
