--- a/web/react/react-system/package.json
+++ b/web/react/react-system/package.json
@@ -14,6 +14,8 @@
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
+    "echarts": "^3.7.2",
+    "echarts-gl": "^1.0.0-beta.5",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.0.1",
     "eslint-loader": "1.9.0",
