--- a/kotlin/_system/src/main/resources/application.properties
+++ b/kotlin/_system/src/main/resources/application.properties
@@ -6,6 +6,7 @@ server.session.cookie.max-age=3600
 #spring.redis.password=learnwy_redis
 #spring.redis.host=www.learnwy.com
 #spring.redis.port=50829
+
 # data
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -15,5 +16,5 @@ spring.datasource.password=learnwy_db
 # view
 ## restart exclude path
 #spring.devtools.restart.exclude=
-# static path
-spring.mvc.static-path-pattern=/resources/**
+## static path
+#spring.mvc.static-path-pattern=/resources/**
