--- a/web/react/react-system/package.json
+++ b/web/react/react-system/package.json
@@ -33,10 +33,14 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
+    "pubsub-js": "^1.5.7",
     "raf": "3.4.0",
     "react": "^16.0.0",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.0.0",
+    "react-hot-loader": "^3.1.1",
+    "react-router": "^4.2.0",
+    "rxjs": "^5.5.2",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -54,13 +58,22 @@
     "eslint_markdown": "eslint --format './node_modules/eslint-formatter-markdown/markdown.js' ./src/*  -o ./dist/eslint/index.md --fix"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.6",
     "babel-eslint": "^8.0.1",
+    "babel-loader": "^7.1.2",
+    "css-loader": "^0.28.7",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-formatter-markdown": "^1.0.4",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0"
+    "eslint-plugin-react": "^7.4.0",
+    "html-webpack-plugin": "^2.29.0",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "sass": "^1.0.0-beta.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0"
   },
   "jest": {
     "collectCoverageFrom": [
