--- a/web/react/react-components/package.json
+++ b/web/react/react-components/package.json
@@ -33,14 +33,22 @@
     "eslint": "^4.10.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
+    "fs-extra": "^4.0.2",
     "gulp": "^3.9.1",
+    "gulp-rm": "^1.0.4",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "postcss-loader": "^2.0.8",
+    "rimraf": "^2.6.2",
+    "sass": "^1.0.0-beta.3",
     "sass-loader": "^6.0.6",
     "source-map": "^0.6.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
     "ts-loader": "^3.1.1",
+    "tslint": "^5.8.0",
+    "tslint-react": "^3.2.0",
     "typescript": "^2.6.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
