--- a/kotlin/spring-boot/system/src/main/resources/application.properties
+++ b/kotlin/spring-boot/system/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-# port
+# server
 server.port=50820
+server.address=127.0.0.1
+
 # data jpa
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/learnwy
@@ -8,7 +10,6 @@ spring.datasource.password=learnwy
 spring.datasource.separator=-
 # session
 spring.session.store-type=redis
-
 # redis
 spring.redis.database=0
 spring.redis.host=localhost
@@ -18,3 +19,5 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.max-wait=-1
 spring.redis.pool.min-idle=0
 spring.redis.port=6379
+# resources
+
