--- a/web/system/.eslintrc
+++ b/web/system/.eslintrc
@@ -1,5 +1,16 @@
 {
-    "rules":{
-        
+    "parser": "babel-eslint",
+    "rules": {
+        "semi": ["error", "never"],
+        "quotes": ["error", "single"],
+        "comma-dangle": ["error", "never"],
+        "max-params": [0, 3],
+        // "quote-props": [2, "always"]
+        "vars-on-top": 2
+    },
+    "env": {
+        "es6": true,
+        "node": true,
+        "browser": true
     }
 }
