--- a/web/system/package.json
+++ b/web/system/package.json
@@ -3,24 +3,49 @@
   "version": "1.0.0",
   "description": "learnwy's system",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "antd": "^2.13.10",
+    "lodash": "^4.17.4",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
+  },
   "devDependencies": {
+    "@types/antd": "^1.0.0",
     "@types/jquery": "^3.2.16",
+    "@types/lodash": "^4.14.85",
+    "@types/react": "^16.0.23",
+    "@types/react-dom": "^16.0.3",
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.2",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-es2018": "^1.0.0",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.11.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "grunt": "^1.0.1",
     "gulp": "^3.9.1",
+    "html-webpack-plugin": "^2.30.1",
+    "inline-source-map": "^0.6.2",
     "jquery": "^3.2.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "postcss-loader": "^2.0.8",
+    "sass-loader": "^6.0.6",
+    "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
+    "ts-loader": "^3.1.1",
     "typescript": "^2.6.1",
     "url-loader": "^0.6.2",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
